<resources>

    <string name="invalid_date_and_time">invalid Date and Time</string>
    <string name="type_here">Type here…</string>
    <string name="discard">Discard</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="error_in_operation">error in operation occurred</string>
    <string name="modified_at">\"Modified at \"</string>
<!--    <string name="alarm_has_been_set_for">\"Alarm has been set for \"</string>-->

    <string name="cd_discard">Discard note</string>
    <string name="cd_delete">Delete note</string>
    <string name="cd_edit_note_alarm">Edit Note Alarm</string>
    <string name="cd_add_alarm">Add Alarm</string>
    <string name="cd_delete_alarm">Delete Alarm</string>
    <string name="cd_set_alarm">Set Alarm</string>
    <string name="cd_reset_date_and_time">Reset Date and Time</string>
    <string name="cd_save">save</string>

</resources>